--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Book heaven</title>
+    <title>Книжковий рай</title>
 </head>
 <body>
-    
+    <main class="section-main">
+        <img class="section-main-logo" src="img/Book.png" alt="Book">
+    </main>
+
+    <section class="second-section">
+
+    </section>
+
+    <section class="third-section">
+
+    </section>
+
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
