--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <main class="section-main">
         <img class="section-main-logo" src="img/Book.png" alt="Book">
+        <h1 class="section-main-title">Книжковий Рай</h1>
+        <h2 class="section-main-subtitle">Відкрий для себе наступну чудову книгу</h2>
+        <button class="section-main-button">Дізнатися більше</button>
     </main>
 
     <section class="second-section">
