Second section added
Tags to second section added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     </main>
 
     <section class="second-section">
-
+    <img src="img/Library.jpg" alt="Зображення бібліотеки" class="second-section-img">
+    <div class="second-section-info">
+        <h3 class="section-subtitle">ЛАСКАВО ПРОСИМО ДО КНИЖКОВОГО РАЮ</h3>
+        <h3 class="section-title">Про нашу бібліотеку</h3>
+        <p class="second-section-text">Ласкаво просимо до нашої бібліотеки, де ви знайдете широкий вибір книг для будь-якого віку та вподобань. Приходьте та насолоджуйтеся читанням у затишній атмосфері.</p>
+        <p class="second-section-name"><span class="second-section-name-style">ІВАН ІВАНЕНКО</span> - Засновник Книжкового Раю</p>
+    </div>
     </section>
 
     <section class="third-section">
